[metadata]
name = scrapbox
version = attr: scrapbox.__version__
author = HelloRusk
author-email = 7X.rusk@gmail.com
home-page = https://github.com/7ma7X/scrapbox-python
license = MIT
description = An unofficial wrapper around the Scrapbox API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    requests
tests_require =
    nose